# statscata

./: .gitignore  README.md  common.py  perfParser.py  ruleGroupPerfParser.py  rulePerfParser.py  setup.cfg  setup.py  timestampedParser.py
statscata/: __init__.py  common.py  perfParser.py  prefilterPerfParser.py  ruleGroupParser.py  ruleGroupPerfParser.py  ruleGroupPrefilterPerfParser.py  rulePerfParser.py  timestampedParser.py
tests/: context.py  prune_rule_groups.py  tests.py
tests/data/: rule_perf.json  rule_perf_single.json  testfile.txt
workspace/: test.py
