[metadata]
name = statscata
version = 0.1.1
author = Colin Evrard
author_email = colin.evrard@uclouvain.be
description = A set of helper data structures to analyze suricata statistics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/supercoolin/statscata
classifiers =
    Programming Language :: Python :: 3
    License :: MIT License ::
    Operating System :: OS Independent 

[options]
package_dir = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
